objects/Initiative_Deadline__c.object
<CustomObject>
    <description>A deadline associated with an Executive Initiative</description>
    <fields>
        <fullName>Deadline_Name__c</fullName>
        <description>The name of the Initiative Deadline item</description>
        <inlineHelpText>The name of the Initiative Deadline item</inlineHelpText>
        <label>Deadline Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deadline_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the deadline was met and completed</description>
        <inlineHelpText>Indicates whether the deadline was met and completed</inlineHelpText>
        <label>Deadline completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the Initiative Deadline item</description>
        <inlineHelpText>The description of the Initiative Deadline item</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>The date that this Initiative Deadline is required to be completed</description>
        <inlineHelpText>The date that this Initiative Deadline is required to be completed</inlineHelpText>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <description>The Initiative to which this Deadline item belongs</description>
        <inlineHelpText>The Initiative to which this Deadline item belongs</inlineHelpText>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Initiative Deadlines</relationshipLabel>
        <relationshipName>Initiative_Deadlines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Overdue__c</fullName>
        <formula>IF (  Deadline_completed__c  = False,
      IF ( ISBLANK ( Due_Date__c ),
           False,
           IF ( ( Due_Date__c  - TODAY() ) &lt; 0, True, False) 
         )
      , False
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Overdue</label>
        <type>Checkbox</type>
    </fields>
    <label>Initiative Deadline</label>
    <nameField>
        <displayFormat>EID-{00000}</displayFormat>
        <label>Deadline ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiative Deadlines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>